Update KEY_LIST by removing VIP tiers
Removed VIP3, VIP4, and VIP5 from KEY_LIST.

Signed-off-by: langchibinh665-afk <langchibinh665@gmail.com>

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@ const KEY_LIST = {
   "BINHVIPPRO": 10000000000,
   "VIP1": 1440,
   "VIP2": 60,
-  "VIP3": 1,
-  "VIP4": 5,
-  "VIP5": 1,
+  "free30p":30,
 };
 
 // localStorage keys
