--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="utf-8" />
-<title>Tool Tài Xỉu - Nh Thuc</title>
+<title>Tool Tài Xỉu - Bình</title>
 <title>cờ bạc không giúp ta đổi đồi,nó chỉ giúp đổi số dư tk</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <style>
@@ -30,7 +30,6 @@
     <input id="keyInput" placeholder="Nhập key..." autocomplete="off" />
     <div class="btns">
       <button onclick="checkKey()">Xác thực</button>
-      <button onclick="clearAll()">xóa local</button>
     </div>
     <p id="keyMsg" class="small"></p>
   </div>
@@ -38,7 +37,7 @@
   <!-- MAIN TOOL -->
   <div id="mainTool" class="box" style="display:none;">
     <h3>Phân tích từ MD5</h3>
-    <input id="md5Input" placeholder="Dán mã MD5 (32 ký tự hex)..." autocomplete="off"/>
+    <input id="md5Input" placeholder="Dán chuỗi MD5 (32 ký tự hex)..." autocomplete="off"/>
     <div class="btns">
       <button onclick="runAnalyze()">Phân Tích</button>
       <button onclick="clearAll()">Xóa</button>
