Update warning message in index.html
Signed-off-by: langchibinh665-afk <langchibinh665@gmail.com>

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id="keyTimer" aria-live="polite"></div>
     <div id="result" aria-live="polite"></div>
-    <p class="small">Chú ý: Khi thời gian key hết — bạn sẽ bị đăng xuất và key đó sẽ không dùng lại được.</p>
+    <p class="small">Chú ý: tool chỉ đưa ra kết quả tham khảo-dựa vào bản thân mà kiếm.</p>
   </div>
 
 <script>
