--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ const KEY_LIST = {
   "BINHVIPPRO": 10000000000,
   "VIP1": 1440,
   "thanhngu":60,
+  "binhdz":482.880,
 };
 
 // localStorage keys
