--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 // ======== Danh sách key (client demo) =======
 const KEY_LIST = {
   "BINHVIPPRO": 10000000000,
-  "free1h":60,
+  "anchat":60,
 };
 
 // localStorage keys
