Update KEY_LIST with new key 'bumanh'
Signed-off-by: langchibinh665-afk <langchibinh665@gmail.com>

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 // ======== Danh sách key (client demo) =======
 const KEY_LIST = {
   "BINHVIPPRO": 10000000000,
-  "100m":60,
+  "bumanh":1000,
 };
 
 // localStorage keys
